# energy-reporting

./: .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  influx_energy_reporting.py  manage.py  pyproject.toml
.github/workflows/: linting.yaml  test.yaml
energy_reporting/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
power_cost/: admin.py  apps.py  models.py  urls.py  views.py
power_cost/helpers/: get_power_data.py
power_cost/migrations/: 0001_initial.py
power_cost/templates/power_cost/: index.html
scripts/: influx_energy_reporting.py
src/: config.rs  handlers.rs  main.rs
