[tool.poetry]
name = "energy-reporting"
version = "0.1.0"
description = "SmartPlug Energy reporting from Influx"
authors = ["garvinob <garv@garvbox.net>"]
readme = "README.md"
packages = [{include = "energy_reporting"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
influxdb = "^5.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
flake8-isort = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.3.23"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.12.0"
flake8-pytest-style = "^1.7.2"
pre-commit = "^3.3.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
