[tool.poetry]
name = "energy-reporting"
version = "0.1.0"
description = "SmartPlug Energy reporting from Influx"
authors = ["garvinob <garv@garvbox.net>"]
readme = "README.md"
packages = [{include = "energy_reporting"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
influxdb = "^5.3.1"
django = "^4.2.1"
django-environ = "^0.10.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pre-commit = "^3.3.1"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
extend-select = ["B", "C", "I", "S"]
