[tool.poetry]
name = "energy-reporting"
version = "0.1.0"
description = "SmartPlug Energy reporting from Influx"
authors = ["garvinob <garv@garvbox.net>"]
readme = "README.md"
packages = [{include = "energy_reporting"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
influxdb = "^5.3.1"
django = "^4.2.1"
django-environ = "^0.10.0"
django-extensions = "^3.2.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pre-commit = "^3.3.1"
ruff = "^0.0.270"
ipython = "^8.14.0"
mypy = "^1.5.0"
django-stubs = "^4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
extend-select = ["B", "C", "I", "S"]


[tool.mypy]
plugins = "mypy_django_plugin.main"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "energy_reporting.settings"
strict_settings = false
